Add back default Debian Nagios commands

--- a/nagios/objects/contacts.cfg
+++ b/nagios/objects/contacts.cfg
@@ -17,3 +17,8 @@ define contactgroup {
 	contactgroup_name testnet-maintainers
 	members rchain-sre
 }
+
+define contactgroup {
+	contactgroup_name admins
+	members rchain-sre
+}
