Add deploy port service (40401)

--- a/nagios/conf.d/services-testnet.cfg
+++ b/nagios/conf.d/services-testnet.cfg
@@ -11,3 +11,10 @@ define service {
 	hostgroup_name testnet
 	check_command check_tcp!40404
 }
+
+define service {
+	use generic-service
+	service_description tcp-port:40401
+	hostgroup_name testnet-public-deploy
+	check_command check_tcp!40401
+}
