--- a/nagios/conf.d/hosts-testnet.cfg
+++ b/nagios/conf.d/hosts-testnet.cfg
@@ -59,5 +59,5 @@ define host {
 define host {
 	use linux-server
 	host_name node9.testnet.rchain-dev.tk
-	hostgroups testnet
+	hostgroups testnet,testnet-public-deploy
 }
