Add missing hostgroup

--- a/nagios/conf.d/hosts-testnet.cfg
+++ b/nagios/conf.d/hosts-testnet.cfg
@@ -2,6 +2,10 @@ define hostgroup {
 	hostgroup_name testnet
 }
 
+define hostgroup {
+	hostgroup_name testnet-public-deploy
+}
+
 define host {
 	use linux-server
 	host_name node0.testnet.rchain-dev.tk
