Add errors-in-log service

--- a/nagios/conf.d/services-testnet.cfg
+++ b/nagios/conf.d/services-testnet.cfg
@@ -14,6 +14,13 @@ define service {
 
 define service {
 	use generic-service
+	service_description errors-in-log
+	hostgroup_name testnet
+	check_command return-ok
+}
+
+define service {
+	use generic-service
 	service_description tcp-port:40401
 	hostgroup_name testnet-public-deploy
 	check_command check_tcp!40401
