Set errors-in-log passive

--- a/nagios/conf.d/services-testnet.cfg
+++ b/nagios/conf.d/services-testnet.cfg
@@ -16,6 +16,9 @@ define service {
 	use generic-service
 	service_description errors-in-log
 	hostgroup_name testnet
+	active_checks_enabled 0
+	max_check_attempts 1
+	initial_state u
 	check_command return-ok
 }
 
