Use testnet/devnet host template

--- a/nagios/conf.d/hosts-testnet.cfg
+++ b/nagios/conf.d/hosts-testnet.cfg
@@ -7,61 +7,60 @@ define hostgroup {
 }
 
 define host {
-	use linux-server
+    name testnet-host
+    use linux-server
+    register 0
+    contact_groups testnet-maintainers
+	hostgroups testnet
+}
+
+define host {
+	use testnet-host
 	host_name node0.testnet.rchain-dev.tk
-	hostgroups testnet
 }
 
 define host {
-	use linux-server
+	use testnet-host
 	host_name node1.testnet.rchain-dev.tk
-	hostgroups testnet
 }
 
 define host {
-	use linux-server
+	use testnet-host
 	host_name node2.testnet.rchain-dev.tk
-	hostgroups testnet
 }
 
 define host {
-	use linux-server
+	use testnet-host
 	host_name node3.testnet.rchain-dev.tk
-	hostgroups testnet
 }
 
 define host {
-	use linux-server
+	use testnet-host
 	host_name node4.testnet.rchain-dev.tk
-	hostgroups testnet
 }
 
 define host {
-	use linux-server
+	use testnet-host
 	host_name node5.testnet.rchain-dev.tk
-	hostgroups testnet
 }
 
 define host {
-	use linux-server
+	use testnet-host
 	host_name node6.testnet.rchain-dev.tk
-	hostgroups testnet
 }
 
 define host {
-	use linux-server
+	use testnet-host
 	host_name node7.testnet.rchain-dev.tk
-	hostgroups testnet
 }
 
 define host {
-	use linux-server
+	use testnet-host
 	host_name node8.testnet.rchain-dev.tk
-	hostgroups testnet
 }
 
 define host {
-	use linux-server
+	use testnet-host
 	host_name node9.testnet.rchain-dev.tk
-	hostgroups testnet,testnet-public-deploy
+	hostgroups +testnet-public-deploy
 }
