--- a/nagios/objects/contacts.cfg
+++ b/nagios/objects/contacts.cfg
@@ -14,11 +14,17 @@ define contact {
 }
 
 define contactgroup {
-	contactgroup_name testnet-maintainers
+	contactgroup_name admins
 	members rchain-sre
 }
 
 define contactgroup {
-	contactgroup_name admins
+	contactgroup_name testnet-maintainers
+	#members rchain-sre,chris.boscolo@rchain.coop
+	members rchain-sre
+}
+
+define contactgroup {
+	contactgroup_name devnet-maintainers
 	members rchain-sre
 }
