--- a/nagios/conf.d/hosts-devnet.cfg
+++ b/nagios/conf.d/hosts-devnet.cfg
@@ -3,37 +3,39 @@ define hostgroup {
 }
 
 define host {
-	use linux-server
+    name devnet-host
+    use linux-server
+    register 0
+    contact_groups devnet-maintainers
+	hostgroups devnet
+}
+
+define host {
+	use devnet-host
 	host_name bootstrap-testnet.rchain-dev.tk
-	hostgroups devnet
 }
 
 define host {
-	use linux-server
+	use devnet-host
 	host_name validator-01.rchain-dev.tk
-	hostgroups devnet
 }
 
 define host {
-	use linux-server
+	use devnet-host
 	host_name validator-02.rchain-dev.tk
-	hostgroups devnet
 }
 
 define host {
-	use linux-server
+	use devnet-host
 	host_name validator-03.rchain-dev.tk
-	hostgroups devnet
 }
 
 define host {
-	use linux-server
+	use devnet-host
 	host_name validator-04.rchain-dev.tk
-	hostgroups devnet
 }
 
 define host {
-	use linux-server
+	use devnet-host
 	host_name validator-05.rchain-dev.tk
-	hostgroups devnet
 }
