--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -24,5 +24,5 @@ define service {
 	use generic-service
 	hostgroup_name web-hosts
 	service_description Web
-	check_command check_https!--sni -f sticky -w 5 -c 10
+	check_command check_https
 }
