Enable real contacts

--- a/nagios/objects/contacts.cfg
+++ b/nagios/objects/contacts.cfg
@@ -2,8 +2,7 @@ define contact {
 	contact_name rchain-sre
 	use generic-contact
 	alias RChain SRE
-	#email rchain_sre@rchain.coop
-	email tomas.virtus@rchain.coop
+	email rchain_sre@rchain.coop
 }
 
 define contact {
@@ -20,8 +19,7 @@ define contactgroup {
 
 define contactgroup {
 	contactgroup_name testnet-maintainers
-	#members rchain-sre,chris.boscolo@rchain.coop
-	members rchain-sre
+	members rchain-sre,chris.boscolo@rchain.coop
 }
 
 define contactgroup {
