--- a/nagios/objects/contacts.cfg
+++ b/nagios/objects/contacts.cfg
@@ -6,6 +6,13 @@ define contact {
 }
 
 define contact {
+	contact_name chris
+	use generic-contact
+	alias Chris Boscolo
+	email chris.boscolo@rchain.coop
+}
+
+define contact {
 	contact_name rchain-makers
 	use generic-contact
 	alias RChain Makers
@@ -19,7 +26,7 @@ define contactgroup {
 
 define contactgroup {
 	contactgroup_name testnet-maintainers
-	members rchain-sre,chris.boscolo@rchain.coop
+	members rchain-sre,chris
 }
 
 define contactgroup {
