Add more rchain-dev hosts

--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -20,9 +20,40 @@ define host {
 	hostgroups web-hosts
 }
 
+define host {
+	use linux-server
+	host_name nagios
+	address nagios.c.developer-222401.internal
+}
+
+define host {
+	use linux-server
+	host_name rdoctor.rchain-dev.tk
+}
+
+define host {
+	use linux-server
+	host_name logstash
+	address nagios.c.developer-222401.internal
+}
+
 define service {
 	use generic-service
 	hostgroup_name web-hosts
 	service_description Web
 	check_command check_https
+}
+
+define service {
+	use generic-service
+	host_name logstash
+	service_description logstash-tcp
+	check_command check_tcp!4560
+}
+
+define service {
+	use generic-service
+	host_name nagios
+	service_description nagios-api
+	check_command check_http!-p 6315 -u /status
 }
