Mask correct services

--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -28,13 +28,13 @@ define host {
 
 define host {
 	use linux-server
-	host_name rdoctor.rchain-dev.tk
+	host_name logstash
+	address logstash.c.developer-222401.internal
 }
 
 define host {
 	use linux-server
-	host_name logstash
-	address nagios.c.developer-222401.internal
+	host_name rdoctor.rchain-dev.tk
 }
 
 define service {
@@ -56,4 +56,25 @@ define service {
 	host_name nagios
 	service_description nagios-api
 	check_command check_http!-p 6315 -u /status
+}
+
+define service {
+	use generic-service
+	host_name rdoctor
+	service_description elasticsearch
+	check_command check_http!-p 9200
+}
+
+define service {
+	use generic-service
+	host_name rdoctor
+	service_description elasticsearch
+	check_command check_http2!kibana.$HOSTNAME
+}
+
+define service {
+	use generic-service
+	host_name rdoctor
+	service_description rdoctor-api
+	check_command check_https!-p 9200
 }
