--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -60,21 +60,21 @@ define service {
 
 define service {
 	use generic-service
-	host_name rdoctor
+	host_name rdoctor.rchain-dev.tk
 	service_description elasticsearch
 	check_command check_http!-p 9200
 }
 
-define service {
-	use generic-service
-	host_name rdoctor
-	service_description elasticsearch
-	check_command check_http2!kibana.$HOSTNAME
-}
-
-define service {
-	use generic-service
-	host_name rdoctor
-	service_description rdoctor-api
-	check_command check_https!-p 9200
-}
+#define service {
+#	use generic-service
+#	host_name rdoctor.rchain-dev.tk
+#	service_description elasticsearch
+#	check_command check_http2!kibana.$HOSTNAME
+#}
+#
+#define service {
+#	use generic-service
+#	host_name rdoctor.rchain-dev.tk
+#	service_description rdoctor-api
+#	check_command check_https!-p 9200
+#}
