Check rdoctor nginx

--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -61,16 +61,10 @@ define service {
 define service {
 	use generic-service
 	host_name rdoctor.rchain-dev.tk
-	service_description elasticsearch
-	check_command check_http!-p 9200
+	service_description rdoctor-nginx
+	check_command check_https_sticky
 }
 
-#define service {
-#	use generic-service
-#	host_name rdoctor.rchain-dev.tk
-#	service_description elasticsearch
-#	check_command check_http2!kibana.$HOSTNAME
-#}
 #
 #define service {
 #	use generic-service
