--- a/nagios/objects/commands.cfg
+++ b/nagios/objects/commands.cfg
@@ -9,8 +9,8 @@ define command {
 }
 
 define command {
-	command_name check_https_vhost
-	command_line /usr/bin/printf "%b" "***** Nagios *****\n\nNotification Type: $NOTIFICATIONTYPE$\n\nService: $SERVICEDESC$\nHost: $HOSTALIAS$\nAddress: $HOSTADDRESS$\nState: $SERVICESTATE$\n\nDate/Time: $LONGDATETIME$\n\nAdditional Info:\n\n$SERVICEOUTPUT$\n" | /opt/rchain-nagios/notify-email "** $NOTIFICATIONTYPE$ Service Alert: $HOSTALIAS$/$SERVICEDESC$ is $SERVICESTATE$ **" $CONTACTEMAIL$
+	command_name check_https_sticky
+	command_line /usr/lib/nagios/plugins/check_http -I '$HOSTADDRESS$' -S --sni -f sticky '$ARG1$'
 }
 
 ###############################################################################
