Check kibana too

--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -2,6 +2,13 @@ define hostgroup {
 	hostgroup_name web-hosts
 }
 
+define hostgroup {
+	hostgroup_name web-hosts-4xx
+}
+
+######################################################################
+# Services
+
 define host {
 	use linux-server
 	host_name drone.rchain-dev.tk
@@ -35,13 +42,32 @@ define host {
 define host {
 	use linux-server
 	host_name rdoctor.rchain-dev.tk
+	hostgroups web-hosts-4xx
 }
+
+define host {
+	use linux-server
+	host_name kibana.rdoctor.rchain-dev.tk
+	parents rdoctor.rchain-dev.tk
+	active_checks_enabled 0
+	hostgroups web-hosts
+}
+
+######################################################################
+# Services
 
 define service {
 	use generic-service
 	hostgroup_name web-hosts
-	service_description Web
-	check_command check_https
+	service_description web
+	check_command check_https_sticky
+}
+
+define service {
+	use generic-service
+	hostgroup_name web-hosts-4xx
+	service_description web-4xx
+	check_command check_https_sticky_4xx
 }
 
 define service {
@@ -57,18 +83,3 @@ define service {
 	service_description nagios-api
 	check_command check_http!-p 6315 -u /status
 }
-
-define service {
-	use generic-service
-	host_name rdoctor.rchain-dev.tk
-	service_description rdoctor-nginx
-	check_command check_https_sticky
-}
-
-#
-#define service {
-#	use generic-service
-#	host_name rdoctor.rchain-dev.tk
-#	service_description rdoctor-api
-#	check_command check_https!-p 9200
-#}
