--- a/nagios/objects/commands.cfg
+++ b/nagios/objects/commands.cfg
@@ -10,7 +10,12 @@ define command {
 
 define command {
 	command_name check_https_sticky
-	command_line /usr/lib/nagios/plugins/check_http -I '$HOSTADDRESS$' -S --sni -f sticky '$ARG1$'
+	command_line /usr/lib/nagios/plugins/check_http -H '$HOSTNAME$' -I '$HOSTADDRESS$' -S 1.2 --sni -f sticky '$ARG1$'
+}
+
+define command {
+	command_name check_https_sticky_4xx
+	command_line /usr/lib/nagios/plugins/check_http -H '$HOSTNAME$' -I '$HOSTADDRESS$' -S 1.2 --sni -f sticky -e 200,201,202,203,204,205,206,401,403,404,405,406 '$ARG1$'
 }
 
 ###############################################################################
