Check rdoctor HTTP for explicit status codes

--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -2,10 +2,6 @@ define hostgroup {
 	hostgroup_name web-hosts
 }
 
-define hostgroup {
-	hostgroup_name web-hosts-4xx
-}
-
 ######################################################################
 # Services
 
@@ -42,7 +38,6 @@ define host {
 define host {
 	use linux-server
 	host_name rdoctor.rchain-dev.tk
-	hostgroups web-hosts-4xx
 }
 
 define host {
@@ -50,7 +45,6 @@ define host {
 	host_name kibana.rdoctor.rchain-dev.tk
 	parents rdoctor.rchain-dev.tk
 	active_checks_enabled 0
-	hostgroups web-hosts
 }
 
 ######################################################################
@@ -65,13 +59,6 @@ define service {
 
 define service {
 	use generic-service
-	hostgroup_name web-hosts-4xx
-	service_description web-4xx
-	check_command check_https_sticky_4xx
-}
-
-define service {
-	use generic-service
 	host_name logstash
 	service_description logstash-tcp
 	check_command check_tcp!4560
@@ -82,4 +69,18 @@ define service {
 	host_name nagios
 	service_description nagios-api
 	check_command check_http!-p 6315!-u /status
+}
+
+define service {
+	use generic-service
+	host_name rdoctor.rchain-dev.tk
+	service_description rdoctor-web
+	check_command check_https_sticky!-e 200,404
+}
+
+define service {
+	use generic-service
+	host_name kibana.rdoctor.rchain-dev.tk
+	service_description kibana-web
+	check_command check_https_sticky!-e 401
 }
