--- a/nagios/objects/contacts.cfg
+++ b/nagios/objects/contacts.cfg
@@ -13,6 +13,13 @@ define contact {
 }
 
 define contact {
+	contact_name kent
+	use generic-contact
+	alias Kent Shikama
+	email kent.shikama@rchain.coop
+}
+
+define contact {
 	contact_name rchain-makers
 	use generic-contact
 	alias RChain Makers
@@ -26,7 +33,7 @@ define contactgroup {
 
 define contactgroup {
 	contactgroup_name testnet-maintainers
-	members rchain-sre,chris
+	members rchain-sre,chris,kent
 }
 
 define contactgroup {
