Add testnet-services service group

--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -1,9 +1,12 @@
+######################################################################
+# Host Groups
+
 define hostgroup {
 	hostgroup_name web-hosts
 }
 
 ######################################################################
-# Services
+# Hosts
 
 define host {
 	use linux-server
