--- a/nagios/conf.d/testnet.cfg
+++ b/nagios/conf.d/testnet.cfg
@@ -1,3 +1,6 @@
+######################################################################
+# Host Groups
+
 define hostgroup {
 	hostgroup_name testnet
 }
@@ -5,6 +8,9 @@ define hostgroup {
 define hostgroup {
 	hostgroup_name testnet-public-deploy
 }
+
+######################################################################
+# Hosts
 
 define host {
     name testnet-host
@@ -64,10 +70,19 @@ define host {
 	host_name node9.testnet.rchain-dev.tk
 	hostgroups +testnet-public-deploy
 }
+
+######################################################################
+# Services
+
+define servicegroup {
+	servicegroup_name testnet-services
+}
+
 define service {
 	use generic-service
 	service_description tcp-port:40400
 	hostgroup_name testnet
+	servicegroups testnet-services
 	check_command check_tcp!40400
 }
 
@@ -75,6 +90,7 @@ define service {
 	use generic-service
 	service_description tcp-port:40404
 	hostgroup_name testnet
+	servicegroups testnet-services
 	check_command check_tcp!40404
 }
 
@@ -82,6 +98,7 @@ define service {
 	use generic-service
 	service_description errors-in-log
 	hostgroup_name testnet
+	servicegroups testnet-services
 	active_checks_enabled 0
 	max_check_attempts 1
 	initial_state u
@@ -92,5 +109,6 @@ define service {
 	use generic-service
 	service_description tcp-port:40401
 	hostgroup_name testnet-public-deploy
+	servicegroups testnet-services
 	check_command check_tcp!40401
 }
