Faster service checks

--- a/nagios/conf.d/testnet.cfg
+++ b/nagios/conf.d/testnet.cfg
@@ -79,36 +79,44 @@ define servicegroup {
 }
 
 define service {
+	name testnet-service
 	use generic-service
-	service_description tcp-port:40400
+	register 0
 	hostgroup_name testnet
 	servicegroups testnet-services
+}
+
+define service {
+	name testnet-port
+	use testnet-service
+	register 0
+	check_interval 1
+}
+
+define service {
+	use testnet-port
+	service_description tcp-port:40400
 	check_command check_tcp!40400
 }
 
 define service {
-	use generic-service
+	use testnet-port
 	service_description tcp-port:40404
-	hostgroup_name testnet
-	servicegroups testnet-services
 	check_command check_tcp!40404
 }
 
 define service {
-	use generic-service
+	use testnet-port
+	service_description tcp-port:40401
+	hostgroup_name testnet-public-deploy
+	check_command check_tcp!40401
+}
+
+define service {
+	use testnet-service
 	service_description errors-in-log
-	hostgroup_name testnet
-	servicegroups testnet-services
 	active_checks_enabled 0
 	max_check_attempts 1
 	initial_state u
 	check_command return-ok
-}
-
-define service {
-	use generic-service
-	service_description tcp-port:40401
-	hostgroup_name testnet-public-deploy
-	servicegroups testnet-services
-	check_command check_tcp!40401
 }
