--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -1,29 +1,48 @@
 ######################################################################
-# Host Groups
+# Hosts
 
 define hostgroup {
-	hostgroup_name web-hosts
+	hostgroup_name web-hosts-https
 }
 
-######################################################################
-# Hosts
+define hostgroup {
+	hostgroup_name web-hosts-http
+}
 
 define host {
 	use linux-server
 	host_name drone.rchain-dev.tk
-	hostgroups web-hosts
+	hostgroups web-hosts-https
 }
 
 define host {
 	use linux-server
 	host_name build.rchain-dev.tk
-	hostgroups web-hosts
+	hostgroups web-hosts-https
 }
 
 define host {
 	use linux-server
 	host_name rundeck.rchain-dev.tk
-	hostgroups web-hosts
+	parents build.rchain-dev.tk
+	active_checks_enabled 0
+	hostgroups web-hosts-https
+}
+
+define host {
+	use linux-server
+	host_name rchain-dev.tk
+	parents build.rchain-dev.tk
+	active_checks_enabled 0
+	hostgroups web-hosts-http
+}
+
+define host {
+	use linux-server
+	host_name www.rchain-dev.tk
+	parents build.rchain-dev.tk
+	active_checks_enabled 0
+	hostgroups web-hosts-http
 }
 
 define host {
@@ -55,8 +74,15 @@ define host {
 
 define service {
 	use generic-service
-	hostgroup_name web-hosts
-	service_description web
+	hostgroup_name web-hosts-http
+	service_description web-http
+	check_command check_http
+}
+
+define service {
+	use generic-service
+	hostgroup_name web-hosts-https
+	service_description web-https
 	check_command check_https_sticky
 }
 
