--- a/nagios/conf.d/testnet.cfg
+++ b/nagios/conf.d/testnet.cfg
@@ -118,6 +118,7 @@ define service {
 	service_description errors-in-log
 	active_checks_enabled 0
 	max_check_attempts 1
+	flap_detection_enabled 0
 	initial_state u
 	check_command return-ok
 }
