--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -11,6 +11,14 @@ define hostgroup {
 
 define host {
 	use linux-server
+	name vhost
+	register 0
+	active_checks_enabled 0
+	initial_state o
+}
+
+define host {
+	use linux-server
 	host_name drone.rchain-dev.tk
 	hostgroups web-hosts-https
 }
@@ -22,26 +30,23 @@ define host {
 }
 
 define host {
-	use linux-server
+	use vhost
 	host_name rundeck.rchain-dev.tk
 	parents build.rchain-dev.tk
-	active_checks_enabled 0
 	hostgroups web-hosts-https
 }
 
 define host {
-	use linux-server
+	use vhost
 	host_name rchain-dev.tk
 	parents build.rchain-dev.tk
-	active_checks_enabled 0
 	hostgroups web-hosts-http
 }
 
 define host {
-	use linux-server
+	use vhost
 	host_name www.rchain-dev.tk
 	parents build.rchain-dev.tk
-	active_checks_enabled 0
 	hostgroups web-hosts-http
 }
 
@@ -63,10 +68,9 @@ define host {
 }
 
 define host {
-	use linux-server
+	use vhost
 	host_name kibana.rdoctor.rchain-dev.tk
 	parents rdoctor.rchain-dev.tk
-	active_checks_enabled 0
 }
 
 ######################################################################
