Send errors-in-log notification only once

--- a/nagios/conf.d/testnet.cfg
+++ b/nagios/conf.d/testnet.cfg
@@ -120,5 +120,6 @@ define service {
 	max_check_attempts 1
 	flap_detection_enabled 0
 	initial_state u
+	notification_interval 0
 	check_command return-ok
 }
