devnet: Disable active checks on p2p ports

--- a/nagios/conf.d/devnet.cfg
+++ b/nagios/conf.d/devnet.cfg
@@ -70,12 +70,14 @@ define service {
 	use devnet-port
 	service_description tcp-port:40400
 	check_command check_tcp!40400
+	active_checks_enabled 0
 }
 
 define service {
 	use devnet-port
 	service_description tcp-port:40404
 	check_command check_tcp!40404
+	active_checks_enabled 0
 }
 
 define service {
