Add InfluxDB backups monitoring

--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -65,6 +65,18 @@ define host {
 	parents rdoctor.rchain-dev.tk
 }
 
+define host {
+	use linux-server
+	host_name rtestnet-monitoring
+	address rtestnet-monitoring.c.developer-222401.internal
+}
+
+define host {
+	use linux-server
+	host_name perf-bootstrap
+	address perf-bootstrap.c.developer-222401.internal
+}
+
 ######################################################################
 # Services
 
@@ -108,4 +120,24 @@ define service {
 	host_name kibana.rdoctor.rchain-dev.tk
 	service_description kibana-web
 	check_command check_https_sticky!-e 401
+}
+
+define service {
+	host_name		rtestnet-monitoring
+	service_description     influxdb-database-backup
+	active_checks_enabled   0
+	passive_checks_enabled  1
+	check_freshness         1
+	freshness_threshold     93600 ; 26 hour threshold, since backups may not always finish at the same time
+	check_command           return-ok
+}
+
+define service {
+	host_name		perf-bootstrap
+	service_description     influxdb-database-backup
+	active_checks_enabled   0
+	passive_checks_enabled  1
+	check_freshness         1
+	freshness_threshold     93600 ; 26 hour threshold, since backups may not always finish at the same time
+	check_command           return-ok
 }
