Refine check definitions

--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -123,6 +123,7 @@ define service {
 }
 
 define service {
+	use			generic-service
 	host_name		rtestnet-monitoring
 	service_description     influxdb-database-backup
 	active_checks_enabled   0
@@ -133,6 +134,7 @@ define service {
 }
 
 define service {
+	use			generic-service
 	host_name		perf-bootstrap
 	service_description     influxdb-database-backup
 	active_checks_enabled   0
