Attempt a fix of a backup check

--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -130,7 +130,10 @@ define service {
 	passive_checks_enabled  1
 	check_freshness         1
 	freshness_threshold     93600 ; 26 hour threshold, since backups may not always finish at the same time
-	check_command           return-ok
+	check_command           return-critical
+	check_interval          60
+	retry_interval          1
+	max_check_attempts      1
 }
 
 define service {
@@ -141,5 +144,8 @@ define service {
 	passive_checks_enabled  1
 	check_freshness         1
 	freshness_threshold     93600 ; 26 hour threshold, since backups may not always finish at the same time
-	check_command           return-ok
+	check_command           return-critical
+	check_interval          60
+	retry_interval          1
+	max_check_attempts      1
 }
