Add Coop admin contacts

--- a/nagios/objects/contacts.cfg
+++ b/nagios/objects/contacts.cfg
@@ -1,3 +1,6 @@
+######################################################################
+# Contacts
+
 define contact {
 	contact_name rchain-sre
 	use generic-contact
@@ -20,11 +23,35 @@ define contact {
 }
 
 define contact {
+	contact_name ian
+	use generic-contact
+	alias Ian Bloom
+	email ian.bloom@rchain.coop
+}
+
+define contact {
+	contact_name derek
+	use generic-contact
+	alias Derek Beres
+	email derek.beres@rchain.coop
+}
+
+define contact {
+	contact_name kayvan
+	use generic-contact
+	alias Kayvan Kazeminejad
+	email kayvan.kazeminejad@rchain.coop
+}
+
+define contact {
 	contact_name rchain-makers
 	use generic-contact
 	alias RChain Makers
 	email rchain-makers@rchain.coop
 }
+
+######################################################################
+# Contact Groups
 
 define contactgroup {
 	contactgroup_name admins
@@ -39,4 +66,9 @@ define contactgroup {
 define contactgroup {
 	contactgroup_name devnet-maintainers
 	members rchain-sre
+}
+
+define contactgroup {
+	contactgroup_name coop-admins
+	members ian,derek,kayvan
 }
