Set HTTP(s) check interval to 2 minutes, max failures to 2

--- a/nagios/conf.d/common.cfg
+++ b/nagios/conf.d/common.cfg
@@ -10,6 +10,8 @@ define service {
 	hostgroup_name web-hosts-http
 	service_description web-http
 	check_command check_http
+	check_interval 2
+	max_check_attempts 2
 }
 
 ######################################################################
@@ -24,4 +26,6 @@ define service {
 	hostgroup_name web-hosts-https
 	service_description web-https
 	check_command check_https_sticky
+	check_interval 2
+	max_check_attempts 2
 }
