Monitor devnet via internal IPs too

--- a/nagios/conf.d/devnet.cfg
+++ b/nagios/conf.d/devnet.cfg
@@ -5,6 +5,14 @@ define hostgroup {
 	hostgroup_name devnet
 }
 
+define hostgroup {
+	hostgroup_name devnet-internal
+}
+
+define hostgroup {
+	hostgroup_name devnet-external
+}
+
 ######################################################################
 # Hosts
 
@@ -12,34 +20,74 @@ define host {
     name devnet-host
     use linux-server
     register 0
+	hostgroups +devnet
     contact_groups devnet-maintainers
-	hostgroups devnet
 	check_interval 1
 	notifications_enabled 0
 }
 
 define host {
 	use devnet-host
+	hostgroups +devnet-internal
+	host_name devnet-node0
+}
+
+define host {
+	use devnet-host
+	hostgroups +devnet-internal
+	host_name devnet-node1
+}
+
+define host {
+	use devnet-host
+	hostgroups +devnet-internal
+	host_name devnet-node2
+}
+
+define host {
+	use devnet-host
+	hostgroups +devnet-internal
+	host_name devnet-node3
+}
+
+define host {
+	use devnet-host
+	hostgroups +devnet-internal
+	host_name devnet-node4
+}
+
+define host {
+	use devnet-host
+	parents devnet-node0
+	hostgroups +devnet-external
 	host_name node0.devnet.rchain-dev.tk
 }
 
 define host {
 	use devnet-host
+	parents devnet-node1
+	hostgroups +devnet-external
 	host_name node1.devnet.rchain-dev.tk
 }
 
 define host {
 	use devnet-host
+	parents devnet-node2
+	hostgroups +devnet-external
 	host_name node2.devnet.rchain-dev.tk
 }
 
 define host {
 	use devnet-host
+	parents devnet-node3
+	hostgroups +devnet-external
 	host_name node3.devnet.rchain-dev.tk
 }
 
 define host {
 	use devnet-host
+	parents devnet-node4
+	hostgroups +devnet-external
 	host_name node4.devnet.rchain-dev.tk
 }
 
@@ -54,41 +102,43 @@ define service {
 	name devnet-service
 	use generic-service
 	register 0
-	hostgroup_name devnet
 	servicegroups devnet-services
+	check_interval 1
 	notifications_enabled 0
 }
 
 define service {
-	name devnet-port
 	use devnet-service
-	register 0
-	check_interval 1
-}
-
-define service {
-	use devnet-port
 	service_description tcp-port:40400
+	hostgroup_name devnet-internal
 	check_command check_tcp!40400
-	active_checks_enabled 0
 }
 
 define service {
-	use devnet-port
+	use devnet-service
 	service_description tcp-port:40404
+	hostgroup_name devnet-internal
 	check_command check_tcp!40404
-	active_checks_enabled 0
 }
 
 define service {
-	use devnet-port
+	use devnet-service
 	service_description tcp-port:40401
+	hostgroup_name devnet-internal
 	check_command check_tcp!40401
 }
 
 define service {
 	use devnet-service
+	service_description http:40403/status
+	hostgroup_name devnet-external
+	check_command check_http!-p 40403!-u /status
+}
+
+define service {
+	use devnet-service
 	service_description errors-in-log
+	hostgroup_name devnet-internal
 	active_checks_enabled 0
 	max_check_attempts 1
 	flap_detection_enabled 0
