Use default check_http command

--- a/nagios/conf.d/devnet.cfg
+++ b/nagios/conf.d/devnet.cfg
@@ -132,7 +132,7 @@ define service {
 	use devnet-service
 	service_description http:40403/status
 	hostgroup_name devnet-external
-	check_command check_http!-p 40403!-u /status
+	check_command check_http!-p 40403 -u /status
 }
 
 define service {
