--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -83,7 +83,7 @@ define service {
 	use generic-service
 	host_name nagios
 	service_description nagios-api
-	check_command check_http!-p 6315!-u /status
+	check_command check_http!-p 6315 -u /status
 }
 
 define service {
