--- a/nagios/objects/commands.cfg
+++ b/nagios/objects/commands.cfg
@@ -10,7 +10,7 @@ define command {
 
 define command {
 	command_name check_https_sticky
-	command_line /usr/lib/nagios/plugins/check_http -H '$HOSTNAME$' -I '$HOSTADDRESS$' -S 1.2 --sni -f sticky '$ARG1$'
+	command_line /usr/lib/nagios/plugins/check_http -H '$HOSTNAME$' -I '$HOSTADDRESS$' -S 1.2 --sni -f sticky $ARG1$
 }
 
 ###############################################################################
@@ -141,10 +141,10 @@ define command{
 # defined in http.cfg, which is part of monitoring-plugins-basic.
 #
 ## 'check_http' command definition
-#define command{
-#        command_name    check_http
-#        command_line    $USER1$/check_http -I $HOSTADDRESS$ $ARG1$
-#        }
+define command{
+        command_name    check_http
+        command_line    $USER1$/check_http -I $HOSTADDRESS$ $ARG1$
+        }
 
 
 # Removed in Debian because it conflicts with the command of the same of
