Send Coop services notifications to Coop admins

--- a/nagios/conf.d/coop.cfg
+++ b/nagios/conf.d/coop.cfg
@@ -9,12 +9,14 @@ define hostgroup {
 # Hosts
 
 define host {
-	name coop-host
-	use linux-server
 	register 0
+	use linux-server
+	name coop-host
+	hostgroups +coop-hosts
 	contact_groups coop-admins
-	hostgroups +coop-hosts,web-hosts-https
+	notification_period 24x7
 	check_interval 1
+	max_check_attempts 5
 }
 
 define host {
@@ -50,4 +52,17 @@ define host {
 define host {
 	use coop-host
 	host_name faq.rchain.coop
+}
+
+######################################################################
+# Services
+
+define service {
+	use generic-service
+	service_description web-https
+	hostgroup_name coop-hosts
+	contact_groups coop-admins
+	check_command check_https_sticky
+	check_interval 1
+	max_check_attempts 2
 }
