Fix hostgroup for errors-in-log in devnet

--- a/nagios/conf.d/devnet.cfg
+++ b/nagios/conf.d/devnet.cfg
@@ -138,7 +138,7 @@ define service {
 define service {
 	use devnet-service
 	service_description errors-in-log
-	hostgroup_name devnet-internal
+	hostgroup_name devnet-external
 	active_checks_enabled 0
 	max_check_attempts 1
 	flap_detection_enabled 0
