Group rchain-dev hosts into rchain-dev-group
The hostgroup rchain-dev-group is assigned to new rchain-dev-host host,
which serves as template for other rchain-dev hosts.

--- a/nagios/conf.d/common.cfg
+++ b/nagios/conf.d/common.cfg
@@ -1,3 +1,15 @@
+define hostgroup {
+	hostgroup_name rchain-dev-group
+}
+
+define host {
+	register 0
+	name rchain-dev-host
+	use linux-server
+	hostgroups +rchain-dev-group
+	check_interval 1
+}
+
 ######################################################################
 # HTTP 2xx check
 
