--- a/nagios/conf.d/devnet.cfg
+++ b/nagios/conf.d/devnet.cfg
@@ -17,12 +17,11 @@ define hostgroup {
 # Hosts
 
 define host {
-    name devnet-host
-    use linux-server
-    register 0
+	register 0
+	name devnet-host
+	use rchain-dev-host
 	hostgroups +devnet
-    contact_groups devnet-maintainers
-	check_interval 1
+	contact_groups devnet-maintainers
 	notifications_enabled 0
 }
 
