--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -2,69 +2,69 @@
 # Hosts
 
 define host {
-	use linux-server
+	use rchain-dev-host
 	host_name drone.rchain-dev.tk
-	hostgroups web-hosts-https
+	hostgroups +web-hosts-https
 }
 
 define host {
-	use linux-server
+	use rchain-dev-host
 	host_name build.rchain-dev.tk
-	hostgroups web-hosts-https
+	hostgroups +web-hosts-https
 }
 
 define host {
-	use linux-server
+	use rchain-dev-host
 	host_name rundeck.rchain-dev.tk
 	parents build.rchain-dev.tk
-	hostgroups web-hosts-https
+	hostgroups +web-hosts-https
 }
 
 define host {
-	use linux-server
+	use rchain-dev-host
 	host_name rchain-dev.tk
 	parents build.rchain-dev.tk
-	hostgroups web-hosts-http
+	hostgroups +web-hosts-http
 }
 
 define host {
-	use linux-server
+	use rchain-dev-host
 	host_name www.rchain-dev.tk
 	parents build.rchain-dev.tk
-	hostgroups web-hosts-http
+	hostgroups +web-hosts-http
 }
 
 define host {
-	use linux-server
+	use rchain-dev-host
 	host_name nagios
 	address nagios.c.developer-222401.internal
 }
 
 define host {
-	use linux-server
+	use rchain-dev-host
 	host_name logstash
 	address logstash.c.developer-222401.internal
 }
 
 define host {
-	use linux-server
+	use rchain-dev-host
 	host_name rdoctor.rchain-dev.tk
 }
 
 define host {
-	use linux-server
+	use rchain-dev-host
 	host_name kibana.rdoctor.rchain-dev.tk
 	parents rdoctor.rchain-dev.tk
 }
 
 define host {
-	use linux-server
+	use rchain-dev-host
 	host_name rtestnet-monitoring
 	address rtestnet-monitoring.c.developer-222401.internal
 }
 
 define host {
-	use linux-server
+	use rchain-dev-host
 	host_name perf-bootstrap
 	address perf-bootstrap.c.developer-222401.internal
 }
