--- a/nagios/conf.d/testnet.cfg
+++ b/nagios/conf.d/testnet.cfg
@@ -13,12 +13,11 @@ define hostgroup {
 # Hosts
 
 define host {
-    name testnet-host
-    use linux-server
-    register 0
-    contact_groups testnet-maintainers
-	hostgroups testnet
-	check_interval 1
+	register 0
+	name testnet-host
+	use rchain-dev-host
+	hostgroups +testnet
+	contact_groups testnet-maintainers
 }
 
 define host {
