Add memory_available passive service

--- a/nagios/conf.d/common.cfg
+++ b/nagios/conf.d/common.cfg
@@ -41,3 +41,22 @@ define service {
 	check_interval 2
 	max_check_attempts 2
 }
+
+define service {
+	register 0
+	name passive-service
+	use generic-service
+
+	active_checks_enabled 0
+	max_check_attempts 1
+	flap_detection_enabled 0
+	initial_state o
+	notification_interval 120
+	check_command return-ok
+}
+
+define service {
+	use passive-service
+	service_description memory-available
+	hostgroup_name rchain-dev-group
+}
