--- a/nagios/conf.d/common.cfg
+++ b/nagios/conf.d/common.cfg
@@ -57,6 +57,6 @@ define service {
 
 define service {
 	use passive-service
-	service_description memory-available
+	service_description memory-sum/percent-available
 	hostgroup_name rchain-dev-group
 }
