errors-in-log: Inherit passive-service

--- a/nagios/conf.d/testnet.cfg
+++ b/nagios/conf.d/testnet.cfg
@@ -113,12 +113,7 @@ define service {
 }
 
 define service {
-	use testnet-service
+	use passive-service,testnet-service
 	service_description errors-in-log
-	active_checks_enabled 0
-	max_check_attempts 1
 	flap_detection_enabled 0
-	initial_state u
-	notification_interval 0
-	check_command return-ok
 }
