--- a/nagios/conf.d/common.cfg
+++ b/nagios/conf.d/common.cfg
@@ -18,9 +18,10 @@ define hostgroup {
 }
 
 define service {
+	name web-http
 	use generic-service
-	hostgroup_name web-hosts-http
 	service_description web-http
+	hostgroup_name web-hosts-http
 	check_command check_http
 	check_interval 2
 	max_check_attempts 2
@@ -34,13 +35,17 @@ define hostgroup {
 }
 
 define service {
+	name web-https
 	use generic-service
-	hostgroup_name web-hosts-https
 	service_description web-https
+	hostgroup_name web-hosts-https
 	check_command check_https_sticky
 	check_interval 2
 	max_check_attempts 2
 }
+
+######################################################################
+# Passive checks
 
 define service {
 	register 0
