--- a/nagios/conf.d/misc.cfg
+++ b/nagios/conf.d/misc.cfg
@@ -63,6 +63,18 @@ define host {
 	address perf-bootstrap.c.developer-222401.internal
 }
 
+define host {
+	use rchain-dev-host
+	host_name zipkin.c.developer-222401.internal
+}
+
+define host {
+	use rchain-dev-host
+	host_name zipkin.rchain-dev.tk
+	parents build.rchain-dev.tk
+	hostgroups +web-hosts-https
+}
+
 ######################################################################
 # Services
 
@@ -92,6 +104,14 @@ define service {
 	host_name kibana.rdoctor.rchain-dev.tk
 	service_description kibana-web
 	check_command check_https_sticky!-e 401
+}
+
+define service {
+	use web-http
+	service_description zipkin-http
+	hostgroup_name !web-hosts-http
+	host_name zipkin.c.developer-222401.internal
+	check_command check_http!-p 9411
 }
 
 define service {
