Disable Testnet notifications

--- a/nagios/conf.d/testnet.cfg
+++ b/nagios/conf.d/testnet.cfg
@@ -84,6 +84,7 @@ define service {
 	register 0
 	hostgroup_name testnet
 	servicegroups testnet-services
+	notifications_enabled 0
 }
 
 define service {
